--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@solana/web3.js": "^1.32.0",
+    "borsh": "^0.7.0",
+    "buffer": "^6.0.3",
+    "buffer-layout": "^1.2.2"
   }
 }
