--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typescript",
     "SDK"
   ],
-  "main": "./dist/tsc/main.js",
-  "types": "./dist/tsc/main.d.ts",
+  "main": "./dist/tsc/index.js",
+  "types": "./dist/tsc/index.d.ts",
   "browser": "./dist/esbuild/browser.js",
   "bin": {
     "cli": "./dist/esbuild/cli.js"
@@ -25,7 +25,7 @@
     "test": "ts-mocha tests/*.ts",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
-    "docs": "typedoc --entryPoints src/main.ts",
+    "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.json",
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
