--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "esbuild-node:watch": "esbuild src/cli.ts --bundle --platform=node --watch --sourcemap=external --outfile=dist/esbuild/cli.js"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "esbuild": "^0.14.11",
@@ -49,12 +49,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.32.0",
     "@types/yargs": "^17.0.8",
     "borsh": "^0.7.0",
     "buffer": "^6.0.3",
-    "buffer-layout": "^1.2.2",
     "yargs": "^17.3.1"
   }
 }
