--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,5 @@
-{ "semi": true, "singleQuote": false, "trailingComma": "all" }
+{
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all"
+}
