--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "chai": "^4.3.6",
     "esbuild": "^0.14.11",
     "eslint": "^8.7.0",
     "mocha": "^9.1.4",
