--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "ts-mocha --timeout 1000000 tests/test-*.ts",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
-    "docs": "typedoc --media assets --entryPoints src/index.ts",
+    "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.json",
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
