--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "cli": "ts-node src/cli.ts",
     "lint": "eslint src/ --ext .js,.ts",
-    "test": "ts-mocha --timeout 1000000 tests/test-*.ts",
+    "test": "ts-mocha --timeout 300000 tests/test-*.ts",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/index.ts",
