Fix `dist` is not packaged

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "outDir": "./dist/ts",
+    "outDir": "./dist/tsc",
     "rootDir": "./src",
     "types": [
       "node"
