--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   ],
   "scripts": {
     "cli": "ts-node src/cli.ts",
-    "lint": "eslint src/ --ext .js,.ts",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ts-mocha --timeout 300000 tests/test-*.ts",
+    "eslint": "eslint --cache --cache-location=node_modules/.cache/.eslintcache",
+    "lint": "yarn run eslint src/ --ext .js,.ts",
+    "prepare": "husky install",
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ts-mocha --timeout 300000 --paths tests/test-*.ts",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/index.ts",
@@ -59,10 +61,20 @@
     "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.6",
     "esbuild": "^0.14.11",
-    "eslint": "^8.7.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "mocha": "^9.2.0",
+    "prettier": "^2.5.1",
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   },
@@ -70,6 +82,7 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.32.0",
+    "@types/bn.js": "^5.1.0",
     "@types/yargs": "^17.0.8",
     "borsh": "^0.7.0",
     "buffer": "^6.0.3",
