Fix not resolved paths in /dist

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -42,5 +42,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "tests/**/*.ts"]
+  "exclude": ["node_modules", "dist", "tests/**/*.ts"]
 }
