--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/index.ts",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json && tsc-alias -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json && tsc-alias -p tsconfig.esm.json",
     "build": "yarn clean && yarn build:cjs && yarn build:esm",
     "build-all": "yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
@@ -74,6 +74,7 @@
     "prettier": "^2.5.1",
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
+    "tsc-alias": "^1.6.4",
     "tsconfig-paths": "^3.12.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
