--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
     "buffer": "^6.0.3",
     "yargs": "^17.3.1"
   },
+  "resolutions": {
+    "minimist": "^1.2.6"
+  },
   "publishConfig": {
     "access": "public"
   }
